[tool.poetry]
name = "tps_blog"
version = "0.1.0"
description = ""
authors = ["Ollie <oliver@bassett.net.nz>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
fastapi = "^0.74.1"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
