[tool.poetry]
name = "tps_blog"
version = "0.1.0"
description = ""
authors = ["Ollie <oliver@bassett.net.nz>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { extras = ["standard"], version = "^0.17.5" }
fastapi = "^0.74.1"
Jinja2 = "^3.0.3"
aiopath = "^0.6.10"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.1.0"
mypy = "^0.940"
types-Markdown = "^3.3.12"
types-ujson = "^4.2.1"
requests = "^2.27.1"
pytest-asyncio = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
